# bank-system

./: .env.example  Makefile  README.md  SOLUTION.md  docker-compose.yml  main.py  pyproject.toml
bank_system/: db.py  main.py
bank_system/api/: accounts.py  transactions.py  users.py
bank_system/core/: config.py
migrations/: V1__add_accounts_table.sql  V2__add_transactions.sql
src/bank_system/: db.py  main.py
src/bank_system/api/: accounts.py  auth.py  transactions.py  users.py
src/bank_system/core/: auth.py  config.py
tests/: conftest.py  test_accounts.py  test_transactions.py  test_users.py
